--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="container">
           <div class="card">
             <img
-              src="img/photo_2023-02-27_15-10-26.jpg"
+              src="img/photo_2023-03-14_11-59-58.jpg"
               class="photo"
               alt="user photo "
             />
@@ -176,27 +176,31 @@
           <div class="tech_skills">
             <h3 class="sidebar_title">Tech Skills</h3>
             <span class="tittle-line"></span>
-            <svg class="skills-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-html-5"></use>
-            </svg>
-            <svg class="skills-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-css"></use>
-            </svg>
-            <svg class="skills-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-sass"></use>
-            </svg>
-            <svg class="skills-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-javascript"></use>
-            </svg>
-            <svg class="skills-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-git"></use>
-            </svg>
-            <svg class="skills-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-github"></use>
-            </svg>
-            <svg class="skills-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-figma"></use>
-            </svg>
+
+            <div class="icon-wrap">
+              <svg class="skills-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-html-5"></use>
+              </svg>
+              <svg class="skills-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-css"></use>
+              </svg>
+              <svg class="skills-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-sass"></use>
+              </svg>
+              <svg class="skills-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-javascript"></use>
+              </svg>
+              <svg class="skills-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-git"></use>
+              </svg>
+              <svg class="skills-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-github"></use>
+              </svg>
+              <svg class="skills-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-figma"></use>
+              </svg>
+            </div>
+
             <ul class="tech_skills_list">
               <li class="tech_skills_item">
                 <span class="tech_skills_text">HTML 5</span>
