--- a/index.html
+++ b/index.html
@@ -14,155 +14,10 @@
     <title>Resume Tetiana Okhrymenko</title>
   </head>
   <body>
-    <!--Main -->
-
-    <div class="main">
-      <!--Main content-->
-      <div class="main-wrap">
-        <div class="main_content">
-          <!--About user-->
-          <div class="user-wrap">
-            <h1 class="about_name">Tetiana Okhrymenko</h1>
-            <h2 class="about_position">Frontend Developer / HTML Coder</h2>
-          </div>
-          <div class="about">
-            <p class="about_description">
-              I have a thirst for learning new things, because without
-              development - degradation comes.
-            </p>
-            <p class="about_description">
-              I am not afraid of changes, because they are always for the
-              better.
-            </p>
-            <p class="about_description">
-              Phakapy is a valuable experience and resource for motivation.
-            </p>
-          </div>
-          <!--Projects-->
-          <div class="projects">
-            <h3 class="title">Projects</h3>
-            <ol class="project_list">
-              <li class="projects_item">
-                <span class="project"
-                  ><a
-                    href="https://tetiana1409.github.io/goit-markup-hw-08/"
-                    class="project_link"
-                    >Project WebStudio</a
-                  >
-                  ............... <span class="project_bracket">[</span> HTML5,
-                  CSS3, Adaptive layout
-                  <span class="project_bracket">]</span></span
-                >
-              </li>
-            </ol>
-          </div>
-          <!--Work-->
-          <div>
-            <h3 class="title">Work Experience</h3>
-            <!--Company 1-->
-            <div>
-              <h4 class="work_position">
-                Owner
-                <span class="organizzation">Cafe 'Na IzI'</span>
-              </h4>
-              <p class="period">
-                January 2021 - February 2022
-                <span class="line">|</span> Ukraine, Zhytomyr
-              </p>
-              <ul class="work_list">
-                <li class="work_list_item">
-                  Сontrol over all areas of the coffee shop's profitability
-                  (accounting, financial analysis, cash flows, marketing,
-                  personnel selection and motivation, procurement, interaction
-                  with the city authorities, interaction with suppliers, etc.)
-                </li>
-              </ul>
-            </div>
-            <!--Company 2-->
-            <div>
-              <h4 class="work_position">
-                Engineer for labor organization and regulation
-                <span class="organizzation">Yuka-Invest LLC</span>
-              </h4>
-              <p class="period">
-                November 2018 - October 2020
-                <span class="line">|</span> Ukraine, Zhytomyr
-              </p>
-              <ul class="work_list">
-                <li class="work_list_item">
-                  Сalculation of the cost of parts/works on all production
-                  processes of the enterprise from scratch.
-                </li>
-                <li class="work_list_item">
-                  Сalculation of wages for workers at the newly introduced
-                  rates.
-                </li>
-                <li class="work_list_item">
-                  Preparation of financial statements for management.
-                </li>
-                <li class="work_list_item">
-                  Control of actual financial costs (so that they do not exceed
-                  the planned).
-                </li>
-              </ul>
-            </div>
-            <!--Company 3-->
-            <div>
-              <h4 class="work_position">
-                Engineer for labor organization and regulation
-                <span class="organizzation">ZHYTOMIRTEPLOMASH LLC</span>
-              </h4>
-              <p class="period">
-                May 2011 - November 2018 <span class="line">|</span> Ukraine,
-                Zhytomyr
-              </p>
-              <ul class="work_list">
-                <li class="work_list_item">
-                  Сalculation of wages for workers based on the quantity of
-                  products produced.
-                </li>
-                <li class="work_list_item">
-                  Сontrol of actual financial costs (so that they do not exceed
-                  planned).
-                </li>
-                <li class="work_list_item">
-                  Preparation of financial statements for management.
-                </li>
-                <li class="work_list_item">
-                  Сalculation of the cost of newly created parts.
-                </li>
-              </ul>
-            </div>
-          </div>
-          <!--Education-->
-          <div class="education">
-            <h3 class="title">Education</h3>
-            <!--Education 1-->
-            <h4 class="university">GoIT platform of IT courses</h4>
-            <h5 class="faculty">Full Stack Developer</h5>
-            <p class="period">
-              September 2022 - up to now <span class="line">|</span> Ukraine,
-              Kiev
-            </p>
-            <h4 class="university">National Agricultural University</h4>
-            <h5 class="faculty">Accounting and Auditing</h5>
-            <p class="period">
-              September 2016 - December 2019
-              <span class="line">|</span> Ukraine, Zhytomyr
-            </p>
-            <h4 class="university">Technological College</h4>
-            <h5 class="faculty">Business Economics</h5>
-            <p class="period">
-              September 2006 - June 2008
-              <span class="line">|</span> Ukraine, Zhytomyr
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Sidebar-->
+    <div class="container">
+      <!-------------------------------Sidebar------------------------------->
       <aside class="sidebar">
-        <div class="container">
+        <div class="sidebar-container">
           <div class="card">
             <img
               src="img/photo_2023-03-14_11-59-58.jpg"
@@ -171,7 +26,7 @@
             />
           </div>
 
-          <!--Tech skills-->
+          <!-- -----Tech skills----- -->
 
           <div class="tech_skills">
             <h3 class="sidebar_title">Tech Skills</h3>
@@ -230,7 +85,7 @@
               </li>
             </ul>
           </div>
-          <!--Soft Skills-->
+          <!-- -----Soft Skills------ -->
           <div class="soft_skills">
             <h3 class="sidebar_title">Soft Skills</h3>
             <span class="tittle-line-two"></span>
@@ -286,7 +141,7 @@
             </ul>
           </div>
 
-          <!--Contacts-->
+          <!-- ---------Contacts-------- -->
           <div class="contacts">
             <h3 class="sidebar_title">Contacts</h3>
 
@@ -312,7 +167,7 @@
               </p>
             </div>
           </div>
-          <!-- --------------SOC LIST--------------- -->
+          <!-- ------SOC LIST------ -->
           <div>
             <ul class="soc-list">
               <li class="soc-list__item">
@@ -355,6 +210,154 @@
           </div>
         </div>
       </aside>
+
+      <!----------------------------- Main ----------------------------->
+
+      <div class="main">
+        <div class="main-wrap">
+          <div class="main_content">
+            <!--------About user--------->
+            <div class="user-wrap">
+              <h1 class="about_name">Tetiana Okhrymenko</h1>
+              <h2 class="about_position">Frontend Developer / HTML Coder</h2>
+            </div>
+            <div class="about">
+              <p class="about_description">
+                I have a thirst for learning new things, because without
+                development - degradation comes.
+              </p>
+              <p class="about_description">
+                I am not afraid of changes, because they are always for the
+                better.
+              </p>
+              <p class="about_description">
+                Phakapy is a valuable experience and resource for motivation.
+              </p>
+            </div>
+            <!-----------Projects------------>
+            <div class="projects">
+              <h3 class="title">Projects</h3>
+              <ol class="project_list">
+                <li class="projects_item">
+                  <span class="project"
+                    ><a
+                      href="https://tetiana1409.github.io/goit-markup-hw-08/"
+                      class="project_link"
+                      >Project WebStudio</a
+                    >
+                    ...............
+                    <span class="project_bracket">[</span> HTML5, CSS3, Adaptive
+                    layout <span class="project_bracket">]</span></span
+                  >
+                </li>
+              </ol>
+            </div>
+            <!----------Work------------>
+            <div>
+              <h3 class="title">Work Experience</h3>
+              <!--Company 1-->
+              <div>
+                <h4 class="work_position">
+                  Owner
+                  <span class="organizzation">Cafe 'Na IzI'</span>
+                </h4>
+                <p class="period">
+                  January 2021 - February 2022
+                  <span class="line">|</span> Ukraine, Zhytomyr
+                </p>
+                <ul class="work_list">
+                  <li class="work_list_item">
+                    Сontrol over all areas of the coffee shop's profitability
+                    (accounting, financial analysis, cash flows, marketing,
+                    personnel selection and motivation, procurement, interaction
+                    with the city authorities, interaction with suppliers, etc.)
+                  </li>
+                </ul>
+              </div>
+              <!--Company 2-->
+              <div>
+                <h4 class="work_position">
+                  Engineer for labor organization and regulation
+                  <span class="organizzation">Yuka-Invest LLC</span>
+                </h4>
+                <p class="period">
+                  November 2018 - October 2020
+                  <span class="line">|</span> Ukraine, Zhytomyr
+                </p>
+                <ul class="work_list">
+                  <li class="work_list_item">
+                    Сalculation of the cost of parts/works on all production
+                    processes of the enterprise from scratch.
+                  </li>
+                  <li class="work_list_item">
+                    Сalculation of wages for workers at the newly introduced
+                    rates.
+                  </li>
+                  <li class="work_list_item">
+                    Preparation of financial statements for management.
+                  </li>
+                  <li class="work_list_item">
+                    Control of actual financial costs (so that they do not
+                    exceed the planned).
+                  </li>
+                </ul>
+              </div>
+              <!--Company 3-->
+              <div>
+                <h4 class="work_position">
+                  Engineer for labor organization and regulation
+                  <span class="organizzation">ZHYTOMIRTEPLOMASH LLC</span>
+                </h4>
+                <p class="period">
+                  May 2011 - November 2018 <span class="line">|</span> Ukraine,
+                  Zhytomyr
+                </p>
+                <ul class="work_list">
+                  <li class="work_list_item">
+                    Сalculation of wages for workers based on the quantity of
+                    products produced.
+                  </li>
+                  <li class="work_list_item">
+                    Сontrol of actual financial costs (so that they do not
+                    exceed planned).
+                  </li>
+                  <li class="work_list_item">
+                    Preparation of financial statements for management.
+                  </li>
+                  <li class="work_list_item">
+                    Сalculation of the cost of newly created parts.
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <!------------Education----------->
+            <div class="education">
+              <h3 class="title">Education</h3>
+              <!--Education 1-->
+              <h4 class="university">GoIT platform of IT courses</h4>
+              <h5 class="faculty">Full Stack Developer</h5>
+              <p class="period">
+                September 2022 - up to now <span class="line">|</span> Ukraine,
+                Kiev
+              </p>
+              <!--Education 2-->
+              <h4 class="university">National Agricultural University</h4>
+              <h5 class="faculty">Accounting and Auditing</h5>
+              <p class="period">
+                September 2016 - December 2019
+                <span class="line">|</span> Ukraine, Zhytomyr
+              </p>
+              <!--Education 3-->
+              <h4 class="university">Technological College</h4>
+              <h5 class="faculty">Business Economics</h5>
+              <p class="period">
+                September 2006 - June 2008
+                <span class="line">|</span> Ukraine, Zhytomyr
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
