--- a/index.html
+++ b/index.html
@@ -219,19 +219,17 @@
             <!--------About user--------->
             <div class="user-wrap">
               <h1 class="about_name">Tetiana Okhrymenko</h1>
-              <h2 class="about_position">Frontend Developer / HTML Coder</h2>
+              <h2 class="about_position">Frontend Developer</h2>
             </div>
             <div class="about">
               <p class="about_description">
-                I have a thirst for learning new things, because without
-                development - degradation comes.
-              </p>
-              <p class="about_description">
-                I am not afraid of changes, because they are always for the
-                better.
-              </p>
-              <p class="about_description">
-                Phakapy is a valuable experience and resource for motivation.
+                Junior Frontend Engineer with a significant experience in a
+                field of business and management. Have a great understanding of
+                how to be a part of a team and how to manage one. Through IT
+                courses gained a vital knowledge of how to process business
+                requirements and turn them into a code that meets the
+                expectations. Continuously grow as an engineer and have a strive
+                to become a valuable partr of a team.
               </p>
             </div>
             <!-----------Projects------------>
