--- a/index.html
+++ b/index.html
@@ -357,5 +357,88 @@
         </div>
       </div>
     </div>
+    <!----------------------------- Cover Letter ----------------------------->
+    <div class="cover-letter">
+      <h3 class="letter-title">Cover Letter</h3>
+      <p class="letter-text">Hello! My name is Tetiana Okhrymenko.</p>
+      <p class="letter-text">
+        A year ago, I tried myself in the GoIT marathon of IT courses as a
+        frontend developer and it became my passion!
+      </p>
+      <p class="letter-text">
+        Since September 2022, I have focused specifically on learning the
+        frontend development. I have already passed the HTML and CSS module and
+        now I am in the process of mastering the JavaScript. The course includes
+        React and Node.js which are to be learned.
+      </p>
+      <p class="letter-text">
+        My learning process can be checked out here:
+        <a
+          target="_blank"
+          rel="noreferrer noopener"
+          href="https://github.com/Tetiana1409?tab=repositories"
+          >https://github.com/Tetiana1409?tab=repositories
+        </a>
+      </p>
+      <p class="letter-text">
+        The first project that demonstrates my skills can be reviewed be the
+        following link:
+        <a
+          target="_blank"
+          rel="noreferrer noopener"
+          href="https://tetiana1409.github.io/goit-markup-hw-08/"
+          >https://tetiana1409.github.io/goit-markup-hw-08/</a
+        >
+      </p>
+      <p class="letter-text">Acquired skills at this moment:</p>
+      <ul class="cover-letter-list">
+        <li class="cover-letter-item">
+          <span class="cover-letter-text">HTML 5</span>
+        </li>
+        <li class="cover-letter-item">
+          <span class="cover-letter-text">CSS</span>
+        </li>
+        <li class="cover-letter-item">
+          <span class="cover-letter-text">SASS</span>
+        </li>
+        <li class="cover-letter-item">
+          <span class="cover-letter-text">Adaptive layout</span>
+        </li>
+        <li class="cover-letter-item">
+          <span class="cover-letter-text"
+            >JAVA SCRIPT (still mastering it but I already know the basic
+            concepts (arrays, functions, objects, loops, events etc.))</span
+          >
+        </li>
+        <li class="cover-letter-item">
+          <span class="cover-letter-text">GIT</span>
+        </li>
+        <li class="cover-letter-item">
+          <span class="cover-letter-text">GitHub</span>
+        </li>
+        <li class="cover-letter-item">
+          <span class="cover-letter-text">Figma (modal)</span>
+        </li>
+      </ul>
+      <p class="letter-text">
+        During my learning process I gained vitals skills of working with
+        initial requirements to make sure that the final project meets them and
+        looks exactly as customer wants. Also I got the understanding of how to
+        decompose a big task (e.g. a project) into smaller chunks of work.
+        Additionally I mastered my skills of working as a part of a team and how
+        a team of developers can collaborate while working on the same project
+        through GIT.
+      </p>
+      <p class="letter-text">
+        To summarize, I noticed how the development becomes my passion through
+        out my studying process. Seeing how code turns into a beautiful site
+        motivates me to learn more and acquire all the necessary skills to
+        become a valuable software engineer.
+      </p>
+      <p class="letter-text">
+        I am looking for a job that can help me to master my existing skills and
+        satisfy my continuous seek for knowledge and challenging tasks.
+      </p>
+    </div>
   </body>
 </html>
