--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <!--------About user--------->
             <div class="user-wrap">
               <h1 class="about_name">Tetiana Okhrymenko</h1>
-              <h2 class="about_position">Frontend Developer</h2>
+              <h2 class="about_position">Junior Frontend Developer</h2>
             </div>
             <div class="about">
               <p class="about_description">
